1. Sql схема для проекта Tracker. [#276987]